# linxi_assistant

./: .gitattributes  .gitignore  LICENSE  README.md
agent_server/: pyproject.toml
agent_server/src/: a.py  agent_server.py  config.py
agent_server/src/configs/presets/: agents.py
agent_server/src/plugins/: Untitled.ipynb  ha.py  intent_table.yaml
agent_server/src/plugins/.virtual_documents/: Untitled.ipynb
agent_server_dbus/: interface.xml  main.py
agent_server_flutter/: README.md  \  pubspec.yaml
agent_server_flutter/.dart_tool/: package_config.json  package_config.sync-conflict-20240223-171713-HFAR5HN.json  package_config_subset  package_config_subset.sync-conflict-20240223-171713-HFAR5HN
agent_server_flutter/.dart_tool/extension_discovery/: devtools.json
agent_server_flutter/.dart_tool/flutter_build/06ed3816b9fd9752c7de05d9988123da/: .filecache  debug_elinux_application.stamp  kernel_snapshot.d  kernel_snapshot.stamp  native_assets.d  native_assets.stamp
agent_server_flutter/.dart_tool/flutter_build/0c52c91e829d6b7922ad35fa3cc13006/: .filecache  (+8 more)
agent_server_flutter/elinux/: CMakeLists.txt
agent_server_flutter/linux/: CMakeLists.sync-conflict-20240223-171713-HFAR5HN.txt  my_application.sync-conflict-20240223-171713-HFAR5HN.cc
agent_server_flutter/test/: widget_test.dart
asr_dummy/: .main.py.kate-swp  interface.xml  main.py  o.dart
asr_tencentcloud_dbus/: main.py  你好灵犀_zh_linux_v3_0_0.ppn
asr_tencentcloud_dbus/asr/: speech_recognizer.py
tts_openai/: interface.xml  main.py  main.sync-conflict-20240401-183350-JOZBM5S.py  o.dart
(+36 files in other folders)
