[tool.poetry]
name = "agent-server"
version = "0.1.0"
description = ""
authors = ["CalvinLin"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.4"
feedparser = "^6.0.11"
uvicorn = "^0.27.1"
jinja2 = "^3.1.3"
langchain-core = "^0.1.48"
langchain-openai = "^0.1.4"
fastapi = "^0.110.3"
openai = "^1.25.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[project.scripts]
agent_server = "agent_server:main"
